[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "amalgkit"
dynamic = ["version"]
description = "Tools for transcriptome amalgamation"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  {name = "Kenji Fukushima", email = "kfuku52@gmail.com"},
  {name = "Matthias Freund", email = "matthias_freund@outlook.com"},
]
keywords = ["RNA-seq", "transcriptomics", "bioinformatics", "comparative genomics"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
  "numpy>=1.24.4",
  "pandas>=2.0.3",
  "scipy>=1.10.1",
  "matplotlib>=3.7.5",
  "statsmodels>=0.14",
  "scikit-learn>=1.3.2",
  "biopython>=1.81",
  "defusedxml>=0.7.1",
]

[project.optional-dependencies]
test = ["pytest>=8"]
quality = ["build>=1.3", "ruff>=0.15", "twine>=6"]

[project.scripts]
amalgkit = "amalgkit.cli_entry:main"

[project.urls]
Homepage = "https://github.com/kfuku52/amalgkit"
Documentation = "https://github.com/kfuku52/amalgkit/wiki"
Repository = "https://github.com/kfuku52/amalgkit.git"
Issues = "https://github.com/kfuku52/amalgkit/issues"
Changelog = "https://github.com/kfuku52/amalgkit/releases"

[tool.setuptools]
include-package-data = false

[tool.setuptools.dynamic]
version = {attr = "amalgkit.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["amalgkit*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
amalgkit = [
  "select_rule_sets/base/select_rules.tsv",
  "select_rule_sets/plantae/select_rules.tsv",
  "select_rule_sets/test/select_rules.tsv",
  "select_rule_sets/vertebrate/select_rules.tsv",
  "datasets/yeast/*.fa.gz",
  "datasets/yeast/*.tsv",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
